# thermal_ws

./: .gitignore  README.md
example/: CMakeLists.txt  subscriber_stats_to_clock.cc
glider_gui/include/CVS/: Entries
glider_gui/include/glider_gui/: AxisDialog.h  CompleteSystemGui.h  ExecuteDialog.h  ScenarioDialog.h  glider_gui.h
glider_gui/results/multi_uav/: 1_uav1
glider_gui/results/multi_uav/CVS/: Entries  Repository
glider_gui/src/: CompleteSystemGui.cpp  ExecuteDialog.cpp  MultiUAV.cpp  ScenarioDialog.cpp  ScenarioLayer.cpp  UAS_Widget.cpp  glider_gui.cpp
glider_gui/src/CVS/: Entries  Repository
glider_gui/src/exec/CVS/: Entries  Repository  Tag
glider_gui/ui/: execute_dialog.ui  glider_planner.ui  latex_dialog.ui  multi_uav_new.ui  uas_widget.ui
glider_gui/ui/CVS/: Repository
glider_planner/: Install  TODO
glider_planner/include/CVS/: Entries  Repository
glider_planner/include/glider_planner/: BasicState.h  ExpandingTreePlanner.h  SoaringPlannerFactory.h  UAVFactory.h  UAVROS.h  UAVState.h  UAVs.h  URM.h
glider_planner/include/glider_planner/CVS/: Entries  Repository
glider_planner/sh/: generate_and_copy.sh
glider_planner/sh/CVS/: Entries  Repository
glider_planner/src/: BasicState.cpp  Planner.cpp  SoaringPlannerFactory.cpp  ThreadUAV.cpp  TreeState.cpp  UAVROS.cpp~  UAVReal.cpp
glider_planner/src/CVS/: Entries  Repository
glider_planner/src/exec/: export_scenario.cpp  fp2qgc.cpp  get_data.cpp  main.cpp  multiuav_util.cpp  real_uav_test.cpp
glider_planner/src/exec/CVS/: Entries
glider_planner/test/: real_test_1  soaring_planner_test_1  soaring_planner_test_2  soaring_planner_test_3_hard  test_2  test_2_updraft  test_3  test_4  test_4_400  test_4_mas_retraso
glider_planner/test/Brenes/: test_1_ros  test_2_ros(Modifxjuancarlos)
glider_planner/test/Brenes/CVS/: Entries  Repository
glider_planner/test/CVS/: Entries  Repository
glider_planner/test/Dummy1/: dummy_config  fp  real_test_1
glider_planner/test/Dummy1/CVS/: Entries  Repository
include/ignition/sensors/: GpuRadarSensor.hh  Radar.hh  SensorTypes.hh
src/: CMakeLists.txt  GpuRadarSensor.cc  Radar.cc
src/glider_gui/: CMakeLists.txt  package.xml
src/glider_gui/include/CVS/: Repository
src/glider_gui/include/glider_gui/: About.h  GeoMap.h_back  LatexDialog.h  MapsWidget.h_back  Marker.h_back  MultiUAV.h  ScenarioLayer.h  UAS_Widget.h
src/glider_gui/include/glider_gui/CVS/: Entries  Repository
src/glider_gui/results/CVS/: Entries  Repository
src/glider_gui/results/multi_uav/: 1_uav2
src/glider_gui/results/multi_uav/CVS/: Root
src/glider_gui/src/: About.cpp  AxisDialog.cpp  LatexDialog.cpp
src/glider_gui/src/exec/: main.cpp
src/glider_gui/ui/: about_glider.ui  axis_dialog.ui  glider_planner_antigua.ui  multi_uav.ui  scenario_dialog.ui  uas_widget.ui
src/glider_gui/ui/CVS/: Entries
src/glider_planner/: CMakeLists.txt  ChangeLog  README  package.xml
src/glider_planner/CVS/: Entries  Repository
src/glider_planner/include/glider_planner/: CompleteSystem.h  Planner.h  SoaringPlanner.h  TemporalConstrain.h  ThermalDetector.h  ThreadUAV.h  TimeSlot.h  TreeState.h  UAV.h  UAVReal.h  UAVSimulation.h
src/glider_planner/sh/: clean_results.sh  copy_tests_2.sh  execute.sh
src/glider_planner/src/: CompleteSystem.cpp  ExpandingTreePlanner.cpp  SoaringPlanner.cpp  TemporalConstrain.cpp  ThermalDetector.cpp  TimeSlot.cpp  UAV.cpp  UAVFactory.cpp  UAVROS.cpp  UAVSimulation.cpp  URM.cpp
src/glider_planner/src/exec/: multiuav_main.cpp
src/glider_planner/src/exec/CVS/: Repository
src/glider_planner/test/: soaring_planner_test_2b  soaring_planner_test_3  test_1  test_5  test_5_alt_1500  test_6  uav_test
src/glider_planner/test/Brenes/: real_test_1  real_test_1_simple  real_test_1_simple_2  test_2_ros
src/glider_planner/test/Dummy1/: st  vuelo_pentagono.txt
test/integration/: CMakeLists.txt  gpu_radar_sensor.cc
